--- a/index.html
+++ b/index.html
@@ -8,13 +8,58 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/2094beeb77.js" crossorigin="anonymous"></script>
     <title>exp-commerce-lp</title>
 </head>
 
 <body>
 
-    
+    <div class="main">
+
+        <header class="header text-white h-screen p-5 flex flex-col">
+            <div class="logo self-center">
+                <img src="./assets/images/logo.svg" alt="logo">
+            </div>
+
+            <div class="menu text-3xl text-center h-3/4 self-center m-auto">
+                <ul class="w-full h-full flex flex-col justify-around font-normal menu_ul">
+                    <li class="menu_items p-2">
+                        <a href="#">
+                            <i class="fa fa-home"></i>
+                        </a>
+                    </li>
+                    <li class="menu_items p-2">
+                        <a href="#">
+                            <i class="far fa-bell"></i>
+                        </a>
+                    </li>
+                    <li class="menu_items p-2">
+                        <a href="#">
+                            <i class="far fa-user"></i>
+                        </a>
+                    </li>
+                    <li class="menu_items p-2">
+                        <a href="#">
+                            <i class="far fa-heart"></i>
+                        </a>
+                    </li>
+                    <li class="menu_items p-2">
+                        <a href="#">
+                            <i class="fa fa-cog"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+
+        <main class="mid_section">
+            jskjdks
+        </main>
+
+        <aside class="sidebar">
+            jdksjkjdsk
+        </aside>
+    </div>
 
 </body>
 
