currently on midsection

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="main">
 
-        <header class="header text-white h-screen p-5 flex flex-col">
+        <header class="header text-white h-screen p-5 flex flex-col justify-around">
             <div class="logo self-center">
                 <img src="./assets/images/logo.svg" alt="logo">
             </div>
@@ -53,7 +53,24 @@
         </header>
 
         <main class="mid_section">
-            jskjdks
+            <div class="top_block flex justify-between">
+                <div class="searchbox border flex items-center bg-white rounded-lg">
+                    <i class="fa fa-search text-2xl p-2"></i>
+                    <input type="text" placeholder="Seach next experience..." class="search p-2 rounded-r-lg outline-none">
+                </div>
+                <div class="user_tag p-1 flex items-center">
+                    <span class="mr-2">Hello, <b>Suzzie</b></span>
+                    <span><img src="./assets/images/lake.png" alt="profile image" class="p_image"></span>
+                </div>
+            </div>
+            <div class="experience_block border mt-10">
+                <div class="text-2xl">
+                    <b>Best</b> <span class="font-light">Experiences</span>
+                </div>
+                <div class="location_block">
+                    
+                </div>
+            </div>
         </main>
 
         <aside class="sidebar">
